// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kube connect dialogue local 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  min-height: 400px;
  max-width: 600px;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c13 {
  box-sizing: border-box;
  padding: 8px;
  margin-top: 8px;
  background-color: #010B1C;
  color: #FFFFFF;
  border-radius: 4px;
}

.c15 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c16 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c18 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-top: 24px;
  border-top: 1px solid;
}

.c20 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c17:focus-visible,
.teleport-button__force-focus-visible .c17 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c17:hover,
.teleport-button__force-hover .c17 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c17:active,
.teleport-button__force-active .c17 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c17:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c23:focus-visible,
.teleport-button__force-focus-visible .c23 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c23:hover,
.teleport-button__force-hover .c23 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c23:active,
.teleport-button__force-active .c23 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c23:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-top: 4px;
  margin-bottom: 8px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-top: 4px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c21 {
  display: flex;
  justify-content: space-between;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<body>
  <div />
  <div
    class="c0"
    data-testid="Modal"
  >
    <div
      aria-hidden="true"
      class="c1"
      data-testid="backdrop"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="dialogbox"
      >
        <div
          class="c4 c5"
        >
          <h2
            class="c6"
          >
            Connect to Kubernetes Cluster
          </h2>
        </div>
        <div
          class="c7 c8 c9"
        >
          <div
            class="c10"
          >
            <h3
              class="c11"
            >
              Connect in the CLI using tsh and kubectl
            </h3>
            <span
              class="c12"
            >
              Step 1
            </span>
             - Login to Teleport
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 --auth=local --user=sam some-cluster-name
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c12"
            >
              Optional
            </span>
             
            - To write kubectl configuration to a separate file instead of having your global kubectl configuration modified, run the following command:
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  export KUBECONFIG=\${HOME?}/teleport-kubeconfig.yaml
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c12"
            >
              Step 2
            </span>
             - Select the Kubernetes cluster
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh kube login tele.logicoma.dev-prod
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c18"
          >
            <span
              class="c12"
            >
              Step 3
            </span>
             - Connect to the Kubernetes cluster
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  kubectl get pods
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c19"
          >
            <div
              class="c20 c21"
            >
              <div
                class="c22"
              >
                Or exec into a pod on this Kubernetes cluster in Web UI
              </div>
              <button
                class="c17"
                fill="filled"
              >
                Exec
              </button>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <button
            class="c23"
            fill="filled"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`kube connect dialogue local with requestId 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  min-height: 400px;
  max-width: 600px;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c13 {
  box-sizing: border-box;
  padding: 8px;
  margin-top: 8px;
  background-color: #010B1C;
  color: #FFFFFF;
  border-radius: 4px;
}

.c15 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c16 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c18 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 4px;
  margin-top: 16px;
}

.c20 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-top: 24px;
  border-top: 1px solid;
}

.c21 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c17:focus-visible,
.teleport-button__force-focus-visible .c17 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c17:hover,
.teleport-button__force-hover .c17 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c17:active,
.teleport-button__force-active .c17 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c17:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c24 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c24:focus-visible,
.teleport-button__force-focus-visible .c24 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c24:hover,
.teleport-button__force-hover .c24 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c24:active,
.teleport-button__force-active .c24 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c24:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-top: 4px;
  margin-bottom: 8px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-top: 4px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c22 {
  display: flex;
  justify-content: space-between;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<body>
  <div />
  <div
    class="c0"
    data-testid="Modal"
  >
    <div
      aria-hidden="true"
      class="c1"
      data-testid="backdrop"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="dialogbox"
      >
        <div
          class="c4 c5"
        >
          <h2
            class="c6"
          >
            Connect to Kubernetes Cluster
          </h2>
        </div>
        <div
          class="c7 c8 c9"
        >
          <div
            class="c10"
          >
            <h3
              class="c11"
            >
              Connect in the CLI using tsh and kubectl
            </h3>
            <span
              class="c12"
            >
              Step 1
            </span>
             - Login to Teleport
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 --auth=local --user=sam some-cluster-name --request-id=8289cdb1-385c-5b02-85f1-fa2a934b749f
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c12"
            >
              Optional
            </span>
             
            - To write kubectl configuration to a separate file instead of having your global kubectl configuration modified, run the following command:
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  export KUBECONFIG=\${HOME?}/teleport-kubeconfig.yaml
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c12"
            >
              Step 2
            </span>
             - Select the Kubernetes cluster
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh kube login tele.logicoma.dev-prod
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c18"
          >
            <span
              class="c12"
            >
              Step 3
            </span>
             - Connect to the Kubernetes cluster
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  kubectl get pods
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c19"
          >
            <span
              class="c12"
            >
              Step 4 (Optional)
            </span>
             - When finished, drop the assumed role
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh request drop
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c20"
          >
            <div
              class="c21 c22"
            >
              <div
                class="c23"
              >
                Or exec into a pod on this Kubernetes cluster in Web UI
              </div>
              <button
                class="c17"
                fill="filled"
              >
                Exec
              </button>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <button
            class="c24"
            fill="filled"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`kube connect dialogue sso 1`] = `
.c1 {
  z-index: -1;
  position: fixed;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.5);
  opacity: 1;
  touch-action: none;
}

.c0 {
  position: fixed;
  z-index: 1200;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
}

.c2 {
  height: 100%;
  outline: none;
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  opacity: 1;
  will-change: opacity;
  transition: opacity 225ms cubic-bezier(0.4,0,0.2,1) 0ms;
}

.c3 {
  padding: 32px;
  padding-top: 24px;
  background: #222C59;
  color: #FFFFFF;
  border-radius: 8px;
  box-shadow: 0 8px 32px rgba(0,0,0,0.24);
  display: flex;
  flex-direction: column;
  position: relative;
  overflow-y: auto;
  max-height: calc(100% - 96px);
  min-height: 400px;
  max-width: 600px;
  width: 100%;
}

.c4 {
  box-sizing: border-box;
  margin-bottom: 16px;
  min-height: 32px;
}

.c7 {
  box-sizing: border-box;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c13 {
  box-sizing: border-box;
  padding: 8px;
  margin-top: 8px;
  background-color: #010B1C;
  color: #FFFFFF;
  border-radius: 4px;
}

.c15 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c16 {
  box-sizing: border-box;
  margin-right: 4px;
}

.c18 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 24px;
  margin-top: 24px;
  border-top: 1px solid;
}

.c20 {
  box-sizing: border-box;
  margin-top: 24px;
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c17:focus-visible,
.teleport-button__force-focus-visible .c17 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c17:hover,
.teleport-button__force-hover .c17 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c17:active,
.teleport-button__force-active .c17 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c17:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c23 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c23:focus-visible,
.teleport-button__force-focus-visible .c23 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c23:hover,
.teleport-button__force-hover .c23 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c23:active,
.teleport-button__force-active .c23 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c23:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 18px;
  line-height: 24px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  font-size: 14px;
  line-height: 20px;
  margin-top: 4px;
  margin-bottom: 8px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
  margin-top: 4px;
}

.c5 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c21 {
  display: flex;
  justify-content: space-between;
}

.c9 {
  margin-bottom: 32px;
  flex: 1;
  flex-direction: column;
}

<body>
  <div />
  <div
    class="c0"
    data-testid="Modal"
  >
    <div
      aria-hidden="true"
      class="c1"
      data-testid="backdrop"
    />
    <div
      class="c2"
    >
      <div
        class="c3"
        data-testid="dialogbox"
      >
        <div
          class="c4 c5"
        >
          <h2
            class="c6"
          >
            Connect to Kubernetes Cluster
          </h2>
        </div>
        <div
          class="c7 c8 c9"
        >
          <div
            class="c10"
          >
            <h3
              class="c11"
            >
              Connect in the CLI using tsh and kubectl
            </h3>
            <span
              class="c12"
            >
              Step 1
            </span>
             - Login to Teleport
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh login --proxy=localhost:443 some-cluster-name
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c12"
            >
              Optional
            </span>
             
            - To write kubectl configuration to a separate file instead of having your global kubectl configuration modified, run the following command:
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  export KUBECONFIG=\${HOME?}/teleport-kubeconfig.yaml
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c10"
          >
            <span
              class="c12"
            >
              Step 2
            </span>
             - Select the Kubernetes cluster
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  tsh kube login tele.logicoma.dev-prod
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c18"
          >
            <span
              class="c12"
            >
              Step 3
            </span>
             - Connect to the Kubernetes cluster
            <div
              class="c13 c14"
              color="light"
            >
              <div
                class="c15 c8"
                style="overflow: auto; white-space: pre; word-break: break-all; font-size: 12px; font-family: \\"Droid Sans Mono\\", \\"monospace\\", monospace, \\"Droid Sans Fallback\\";"
              >
                <div
                  class="c16"
                  style="user-select: none;"
                >
                  $
                </div>
                <div>
                  kubectl get pods
                </div>
              </div>
              <button
                class="c17"
                fill="filled"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                Copy
              </button>
            </div>
          </div>
          <div
            class="c19"
          >
            <div
              class="c20 c21"
            >
              <div
                class="c22"
              >
                Or exec into a pod on this Kubernetes cluster in Web UI
              </div>
              <button
                class="c17"
                fill="filled"
              >
                Exec
              </button>
            </div>
          </div>
        </div>
        <div
          class="c7"
        >
          <button
            class="c23"
            fill="filled"
          >
            Close
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
